<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <HorizontalScrollView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txtName"
                    android:gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/home_name"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtUser"
                    android:gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/home_username"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/txtName"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/home_address"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/txtUser"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/home_email"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/txtAddress"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/home_phone"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/txtEmail"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>